--- a/oop_logistics_projects/python-api/requirements.txt
+++ b/oop_logistics_projects/python-api/requirements.txt
@@ -1,15 +1,15 @@
-flask==3.0.0
+flask
 
 # NLP and ML libraries
-transformers==4.35.0
-torch==2.1.0
+transformers
+torch
 
 # Additional utilities
-numpy==1.24.3
-pandas==2.1.0
+numpy
+pandas
 
 # Optional: Vietnamese-specific NLP
 # underthesea==6.7.0
 
 # Production server (optional)
-gunicorn==21.2.0
+gunicorn
