--- a/oop_logistics_projects/pom.xml
+++ b/oop_logistics_projects/pom.xml
@@ -71,7 +71,21 @@
             <artifactId>webdrivermanager</artifactId>
             <version>5.6.2</version>
         </dependency>
-        
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>21</version> 
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>21</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>21</version>
+</dependency>
         <!-- JSoup for HTML parsing -->
         <dependency>
         <groupId>org.jsoup</groupId>
