--- a/oop_logistics_projects/pom.xml
+++ b/oop_logistics_projects/pom.xml
@@ -111,7 +111,7 @@
             <artifactId>exec-maven-plugin</artifactId>
             <version>3.1.0</version>
             <configuration>
-                <mainClass>com.oop.logistics.CommandLineRunner</mainClass>
+                <mainClass>com.oop.logistics.Launcher</mainClass>
             </configuration>
         </plugin>
         <plugin>
