--- a/oop_logistics_projects/.gitignore
+++ b/oop_logistics_projects/.gitignore
@@ -1,2 +1,16 @@
-config.properties
-cookies.txt
+# Java
+*.class
+src/target/
+.idea/
+*.iml
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+venv/
+.env
+
+# OS specific
+.DS_Store
+Thumbs.db
