--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,14 @@ pydantic
 matplotlib
 requests
 numpy
+fastapi
+uvicorn
+pydantic
+matplotlib
+requests
+numpy
+pandas
+# New AI dependencies
+torch 
+transformers
+scipy
