--- a/oop_logistics_projects/pom.xml
+++ b/oop_logistics_projects/pom.xml
@@ -52,8 +52,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-core</artifactId>
-            <version>5.5.0</version>
-            <scope>test</scope>
+            <version>5.11.0</version> <scope>test</scope>
         </dependency>
 
         <!-- Web Scraping Dependencies -->
@@ -153,7 +152,13 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
+          <version>3.2.5</version>
+          <configuration>
+              <argLine>
+                  -XX:+EnableDynamicAgentLoading 
+                  -Dnet.bytebuddy.experimental=true
+              </argLine>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
